--- a/looping.ipynb
+++ b/looping.ipynb
@@ -2,27 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n",
+      "6\n",
       "3\n",
-      "3\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-635714caf76b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrows\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0man_array\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
+      "2\n"
      ]
     }
    ],
@@ -33,7 +22,7 @@
     "#Find row and column length\n",
     "\n",
     "columns = len(an_array[0])\n",
-    "rows = len(an_array[1])\n",
+    "rows = len(an_array)\n",
     "\n",
     "\n",
     "total_length = rows * columns\n",
@@ -42,7 +31,29 @@
     "print(total_length)\n",
     "print(columns)\n",
     "print(rows)\n",
-    "print(an_array.shape)"
+    "#print(an_array.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows : 2\n",
+      "Columns : 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [[1,2,3],[4,5,6]]\n",
+    "arow = len(lista)\n",
+    "acol = len(lista[0])\n",
+    "print(\"Rows : \" + str(arow))\n",
+    "print(\"Columns : \" + str(acol))"
    ]
   },
   {
